# comfyui-x-dub

./: .comfyignore  .gitignore  NOTICE  README.md  install_runtime.sh  nodes.py  pyproject.toml  runtime-requirements.txt
.github/workflows/: publish-comfy-registry.yml
example_workflows/: xdub_frames_vhs_25fps.json
tests/: test_plugin.py  test_progress.py  test_release_assets.py
xdub_runtime/: model_paths.py  runner.py
xdub_runtime/source/: infer_lip_sync_pipeline.py  lip_sync_preprocess.py  utils.py
xdub_runtime/source/diffsynth/: README.md
xdub_runtime/source/diffsynth/configs/: model_configs.py  vram_management_module_maps.py
xdub_runtime/source/diffsynth/core/data/: unified_dataset.py
xdub_runtime/source/diffsynth/core/loader/: model.py
xdub_runtime/source/diffsynth/core/vram/: layers.py
xdub_runtime/source/diffsynth/diffusion/: base_pipeline.py  flow_match.py
xdub_runtime/source/diffsynth/models/: audio_modules.py  model_loader.py  wan_video_dit_lip_sync.py  wan_video_vae.py
xdub_runtime/source/diffsynth/pipelines/: lip_sync.py
xdub_runtime/source/diffsynth/thirdparties/: audio_processor.py  utils.py
xdub_runtime/source/diffsynth/thirdparties/whisper/: audio.py
xdub_runtime/source/onnx_dwpose/: __init__.py  detection.py  detector.py  estimation.py
